# DedeuceBench

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  pyproject.toml
dedeucebench/: __init__.py  adapters.py  aggregate.py  env.py  eval_cli.py  self_check.py
seeds/: levels_dev.json
