[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dedeucebench"
version = "1.0.2"
description = "DedeuceBench: active-learning + control benchmark wrapper around the dedeuce env"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["benchmark", "agents", "active-learning", "control", "verifiers", "prime"]
dependencies = [
  "numpy",
  "datasets>=2.17.0",
  "verifiers>=0.1.3",
]

[project.optional-dependencies]
all = [
  "numpy",
  "datasets>=2.17.0",
  "verifiers>=0.1.3",
  "openai>=1.40.0",
  "anthropic>=0.34.0",
  "google-generativeai>=0.5.0",
]
anthropic = [
  "anthropic>=0.34.0",
]
openai = [
  "openai>=1.40.0",
]
gemini = [
  "google-generativeai>=0.5.0",
]

[project.scripts]
dedeucebench-eval = "dedeucebench.eval_cli:main"
dedeucebench-aggregate = "dedeucebench.aggregate:main"
dedeucebench-selfcheck = "dedeucebench.self_check:main"

[tool.hatch.build.targets.wheel]
packages = ["dedeucebench"]
